--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
   "autoload": {
     "psr-4": {
       "a15lam\\Jarvis\\": "src/",
-      "a15lam\\Workspace\\": "workbench/repos/workspace/src/"
+      "a15lam\\Workspace\\": "workbench/repos/workspace/src/",
+      "a15lam\\PhpWemo\\": "workbench/repos/php-wemo/src/"
     }
   }
 }
