using php-iot library

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
   "prefer-stable": true,
   "require": {
     "php": ">=5.5",
-    "a15lam/workspace": "dev-develop as dev-master",
-    "a15lam/php-wemo": "dev-develop as dev-master"
+    "a15lam/workspace": "~0.1.0",
+    "a15lam/php-iot": "dev-master"
   },
   "autoload": {
     "psr-4": {
